--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <nav>
             <a href="./Bolos/indexbolos.html" target="_self">Bolos &nbsp; &sc;&nbsp;</a> 
             <a href="doces/index-doces.html" target="_self">Doces&nbsp;&sc;&nbsp;</a>
-            <a href="#" target="_self">Salgados</a>
+            <a href="salgado/index-salgado.html" target="_self">Salgados</a>
         </nav>
     
     <main>
@@ -84,14 +84,13 @@
                     </figcaption>
                 </figure>            
         </picture>
-               
             </aside>    
             <p></p>
         </article>
         <nav>
             <a href="./Bolos/indexbolos.html" target="_self">Bolos &nbsp; &sc;&nbsp;</a> 
             <a href="doces/index-doces.html" target="_self">Doces&nbsp;&sc;&nbsp;</a>
-            <a href="#" target="_self">Salgados</a>
+            <a href="salgado/index-salgado.html" target="_self">Salgados</a>
         </nav>
     </main>
     <footer>
