--- a/doces/index-doces.html
+++ b/doces/index-doces.html
@@ -25,6 +25,9 @@
         <!-- <h1> Milena confeittaria</h1>
         <p>Fazendo do seu dia a melhor experiência</p> -->
     </header> 
+    <nav>
+        <a class="volta" href="../index.html">Voltar</a>
+    </nav>
     <section>
         <main>
             <article>                
