--- a/index.html
+++ b/index.html
@@ -91,8 +91,10 @@
             <a href="./Bolos/indexbolos.html" target="_self">Bolos &nbsp; &sc;&nbsp;</a> 
             <a href="doces/index-doces.html" target="_self">Doces&nbsp;&sc;&nbsp;</a>
             <a href="salgado/index-salgado.html" target="_self">Salgados</a>
+            <!-- <a href="../site confeitaria/index.html" target="_self">new &nbsp; &sc;&nbsp;</a> -->
         </nav>
     </main>
+    
     <footer>
         <p>&reg; Flavio Leonardo</p>
         <p> <a href=""></a></p>
